# hexlet-asserts-tests

./: .gitignore  pyproject.toml
tests/: test_capitalize.py
